<resources>
    <string name="app_name">PetCare</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="descripcion">PetCare, cuidandolos por ti.</string>
    <string name="cerrarSesion">Cerrar sesión</string>

    <string name="nombreUsuario">Nombre usuario</string>
    <string name="nombreMascota">Nombre mascota</string>
    <string name="tipoMascota">Tipo de mascota</string>
    <string name="edadMascota">Edad mascota</string>
    <string name="colorMascota">Color mascota</string>
    <string name="saludMascota">Salud</string>
    <string name="creacionMascota">Creación de mascota</string>
    <string name="aggPet">Añadir Pet</string>

    <string name="registrarme">Registrarme</string>
    <string name="correo">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="aggMascota">Agregar mascota</string>
    <string name="agg">Agregar</string>
    <string name="photo">Foto</string>
    <string name="eliminar">Eliminar</string>

</resources>