<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:background="@drawable/ic_background"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarme"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:ems="10"
        android:textSize="28sp"
        android:hint="@string/nombreUsuario"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo"
        android:textSize="28sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/contrasena"
        android:textSize="28sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btn_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:text="Registrarme"
        android:backgroundTint="@color/botong"
        android:layout_marginTop="100dp"/>

</LinearLayout>