<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:background="@drawable/fondo"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/petcare"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/img_background" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_background"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp" />
    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:hint="@string/correo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="30sp"
        android:hint="@string/contrasena"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="600dp"
        android:onClick="abrirLogin"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:backgroundTint="@color/botong"
        android:text="@string/iniciarSesion"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/btn_register"
        android:onClick="abrirRegistro"
        android:layout_width="600dp"
        android:layout_height="50dp"
        android:textSize="20sp"
        android:backgroundTint="@color/botong"
        android:text="Registrarse"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />


</LinearLayout>